--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,6 @@
             "text": "-enable-pretty-printing",
             "ignoreFailures": true
         }],
-        "preLaunchTask": "g++.exe build active file"
-       
+        "preLaunchTask": "C/C++: g++.exe build active file"
     }]
 }
