--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,30 @@ E.cpp
 F.cpp
 G.cpp
 
+a.cpp
+b.cpp
+c.cpp
+d.cpp
+e.cpp
+f.cpp
+g.cpp
 
+program
+program copy
+tempCodeRunnerFile
+A
+B
+C
+D
+E
+F
+G
+a
+b
+c
+d
+e
+f
+g
 
 
